--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "",
   "engines": {
-    "node": "14.15.0"
+    "node": "16.16.0"
   },
   "main": "server.ts",
   "scripts": {
@@ -26,7 +26,7 @@
     "bcryptjs": "2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
@@ -37,19 +37,19 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
-    "@types/cors": "^2.8.6",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.16.1",
-    "@types/node": "^11.11.6",
+    "@types/node": "^18.11.10",
     "@types/sequelize": "^4.27.44",
-    "@types/validator": "^10.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
+    "@types/validator": "^13.7.10",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "eslint": "^6.8.0",
+    "eslint": "^8.29.0",
     "eslint-config-google": "^0.14.0",
-    "mocha": "^6.1.4",
-    "ts-node-dev": "^1.0.0-pre.32",
+    "mocha": "^10.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.2.3"
   }
 }
